fix for single event spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -333,7 +333,6 @@ html, body {
   }
   
   .container-content {
-    min-height: 100%;
     display: flex;
     flex-direction: column;
   }
@@ -341,7 +340,8 @@ html, body {
   .content {
     flex: 1;
     display: flex;
-  }  
+    flex-direction: column;
+  } 
 
   /* For Safari on iOS */
   @supports (-webkit-touch-callout: none) {
